feat: add private direct channels
